--- a/styles/backgroundPage.css
+++ b/styles/backgroundPage.css
@@ -20,18 +20,19 @@
 }
 .background {
   /* height: 99vh; *//* border-radius: 20px; *//* width: calc(100% - 94px); */
-  height: 80vh;
-  width: 80vh;
+  height: 65px;
+  width: 700px;
+  margin-top: 2px;
   margin-bottom: 0.5vh;
+  border-radius: 100px;
   /* margin-left: 90px; */
-  border-radius: 50%;
   position: absolute;
-  margin: auto;
+  margin-right: auto;
+  margin-left: auto;
   /* left: 0; */
   left: 0;
   right: 0;
   top: 0;
-  bottom: 0;
 
   
   overflow: hidden;
@@ -50,9 +51,6 @@
 .elements {
   margin-top: 4vh;
   height: 75vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   margin-left: 2vh;
   z-index: 10;
   position: fixed;
