--- a/styles/mainIconStyle.css
+++ b/styles/mainIconStyle.css
@@ -25,8 +25,8 @@
   top: 0;
   bottom: 0;
   z-index: 3;
-  width: 60vh;
-  height: 60vh;
+  width: 50vh;
+  height: 50vh;
 }
 
 *,
@@ -143,11 +143,11 @@
   animation-delay: 4s;
 }
 
-.backShadow {
-  width: 70vh;
-  height: 70vh;
+/* .backShadow {
+  width: 60vh;
+  height: 60vh;
   background-color: #242121ff;
-  box-shadow: rgba(14, 230, 230, 0.308) 4px 20px 22px -7px;
+  box-shadow: rgba(14, 230, 230, 0.308) 4px 20px 22px -2px;
   z-index: -1;
   position: absolute;
   margin: auto;
@@ -155,9 +155,10 @@
   left: 0;
   right: 0;
   top: 0;
+  opacity: 0;
   bottom: 0;
   padding-bottom: 40px;
-}
+} */
 
 .container div:nth-child(6) {
   height: 25%;
@@ -172,8 +173,7 @@
   text-align: center;
   right: 0;
   left: 0;
-  margin-bottom: 30px;
-  bottom: 0;
+  margin-top: 30px;
   font-family: "Courier New", Courier, monospace;
   color: whitesmoke;
 }
