--- a/styles/navbarStyle.css
+++ b/styles/navbarStyle.css
@@ -16,8 +16,14 @@
   right: 0;
 }
 #navImage {
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
+}
+
+#study_div img,
+#forum_div img {
+  width: 44px;
+  height: 44px;
 }
 
 /* .navContainer {
@@ -41,15 +47,21 @@
 } */
 
 html {
-  overflow: hidden;
+  overflow-y: scroll;
 }
 .firstElements,
 .lastElements {
-  height: 75vh;
   display: flex;
   z-index: 10;
   margin-left: auto;
   margin-right: auto;
+}
+.widgetContainer {
+  width: 100%;
+  display: flex;
+  height: 60px;
+  justify-content: center;
+  bottom: 0;
 }
 .firstElements a img,
 .lastElements a img {
@@ -143,11 +155,36 @@ html {
     transform: scale(1.8);
   }
 }
-#home_div{
+#home_div {
   background-color: rgba(0, 0, 0, 0.85);
 }
-.customWidget{
-  width: 200px;
+.customWidget {
+  width: max-content;
+  display: flex;
+  background-color: var(--background);
+  box-shadow: rgba(73, 71, 71, 0.25) 2px 2px 9px 4px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  border-radius: 100px;
+  font-family: "Comfortaa", cursive;
+  font-size: 10px;
+  position: fixed;
+  margin-top: 10px;
+  margin-bottom: 4px;
+  z-index: 10;
+  bottom: 0;
+}
+.option h1 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.option h1:hover {
+  cursor: pointer;
+}
+#sloganButton {
+  background-color: var(--TeensTeachBlue);
+  border-radius: 100px;
 }
 .navContainer div:nth-child(1) {
   height: 150%;
