cleanedUp nav bar

--- a/styles/backgroundPage.css
+++ b/styles/backgroundPage.css
@@ -15,11 +15,12 @@
   text-align: center;
   font-family: "Comfortaa", cursive;
 }
-.mainSection, .background{
+.mainSection,
+.background {
   margin-left: 90px;
 }
 .background {
-  /* height: 99vh; *//* border-radius: 20px; *//* width: calc(100% - 94px); */
+  /* height: 99vh; */ /* border-radius: 20px; */ /* width: calc(100% - 94px); */
   height: 65px;
   width: 700px;
   margin-top: 2px;
@@ -33,14 +34,13 @@
   left: 0;
   right: 0;
   top: 0;
-
-  
+  position: fixed;
+  z-index: 10;
   overflow: hidden;
   /* animation: spin 8s infinite linear; */
   /* box-shadow: rgba(14, 230, 230, 0.308) 10px 30px 22px 10px; */
   /* box-shadow: rgb(14 230 230) 7px -3px 20px 0px; */
   box-shadow: rgb(14 230 230) 2px -1px 20px 0px;
-  z-index: -1;
   transition: all 1.5s cubic-bezier(0.54, 0.1, 0.31, 1.08);
 }
 .background:active {
@@ -60,7 +60,7 @@
     transform: rotate(360deg);
   }
 }
-body{
+body {
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -72,7 +72,7 @@ body{
   width: 100%;
   border-radius: 20px; /*changeThing, 5%*/
   overflow: hidden;
-  backdrop-filter: blur(2em); /*changeThing, 1.2*/
+  backdrop-filter: blur(1em); /*changeThing, 1.2*/
   -webkit-backdrop-filter: blur(2em);
 }
 
@@ -107,7 +107,7 @@ body{
   left: -5%;
   top: 0;
   animation-duration: 50s;
-  animation-delay: 1s;
+  animation-delay: 8s;
 }
 
 .background div:nth-child(2) {
@@ -117,7 +117,7 @@ body{
   top: 15%;
   right: -15%;
   animation-duration: 45s;
-  animation-delay: 5s;
+  animation-delay: 1s;
 }
 
 .background div:nth-child(3) {
@@ -127,7 +127,7 @@ body{
   bottom: -30%;
   right: -20%;
   animation-duration: 10s;
-  animation-delay: 1s;
+  animation-delay: 4s;
 }
 
 .background div:nth-child(4) {
@@ -146,7 +146,7 @@ body{
   background-color: var(--TeensTeachAlt5);
   top: 50%;
   left: 0;
-  animation-duration: 2.5s;
+  animation-duration: 15s;
   animation-delay: 4s;
 }
 
