--- a/styles/generatlEl.css
+++ b/styles/generatlEl.css
@@ -3,15 +3,18 @@ body {
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 }
+a{
+  color: white;
+  text-decoration: none;
+}
 .smallText {
   font-size: 30px;
   padding: 10px;
   padding-left: 10px;
-  color: var(--TeensTeachAlt8);
+  color: white;
   /* color: white; */
   /* color: var(--background); */
   /* color: black; */
-  font-weight: bold;
   font-family: "Courier New", Courier, monospace;
   text-align: center;
   width: fit-content;
@@ -35,9 +38,10 @@ body {
   ); */
   /* background: linear-gradient(to right, #232526, #414345) */
   border-radius: 10px;
-  box-shadow: rgb(27 168 233 / 40%) -5px -2px 4px,
+  box-shadow: 
     rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   /* box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px; */
+  /* rgb(27 168 233 / 40%) -5px -2px 4px, */
   margin-bottom: 20px;
   margin-top: 20px;
 }
