--- a/styles/about.css
+++ b/styles/about.css
@@ -15,9 +15,10 @@
     ); */
   /* background: linear-gradient(to right, #232526, #414345) */
   border-radius: 30px;
-  box-shadow: rgb(27 168 233 / 40%) -5px -2px 4px,
-    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+    rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   /* box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px; */
+  /* rgb(27 168 233 / 40%) -5px -2px 4px, */
   margin-bottom: 20px;
   margin-top: 20px;
 
@@ -30,9 +31,14 @@
   width: fit-content;
   justify-self: center;
 }
-.personPhoto, .personTitle, .personName{
-    box-shadow: rgb(27 168 233 / 40%) -5px -2px 4px,
+.personTitle,
+.personName {
+  box-shadow: rgb(27 168 233 / 40%) -2px -2px 4px,
     rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+.personPhoto {
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+    rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 .personPhoto {
   margin-top: 20px;
@@ -55,6 +61,12 @@
   margin-right: 5%;
   justify-content: space-around;
 }
-.personTile div{
-    justify-content: right;
+.personTile div {
+  justify-content: right;
+}
+#missionButton {
+  background-color: rgba(0, 0, 0, 0);
+}
+#aboutButton {
+  background-color: var(--TeensTeachBlue);
 }
