--- a/styles/mainIconStyle.css
+++ b/styles/mainIconStyle.css
@@ -19,7 +19,11 @@
     background-color: transparent;
     color: transparent; */
   position: absolute;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
+  /* margin-top: 40vh; */
+  margin-top: auto;
+  margin-bottom: auto;
   left: 0;
   right: 0;
   top: 0;
