--- a/styles/account.css
+++ b/styles/account.css
@@ -46,3 +46,15 @@
 .true {
   background-color: #1ba8e9;
 }
+@media only screen and (max-width: 700px) {
+  #interestsContainer div{
+    font-size: 18px;
+  }
+  #description{
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  #select{
+    margin-top: 0px;
+  }
+}
