--- a/styles/chat.css
+++ b/styles/chat.css
@@ -209,10 +209,13 @@ select:active {
   border-radius: 10px;
   width: 70vw;
   text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-weight: 800;
   border: 1px black;
   padding-left: 10px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Courier New";
+  font-size: 20px;
   background-color: var(--TeensTeachBlue);
   color: var(--background);
   outline: none;
