--- a/styles/navbarStyle.css
+++ b/styles/navbarStyle.css
@@ -62,6 +62,7 @@ html {
   height: 60px;
   justify-content: center;
   bottom: 0;
+  position: fixed;
 }
 .firstElements a img,
 .lastElements a img {
@@ -110,7 +111,7 @@ html {
     transform: rotate(360deg);
   }
 }
-.frontContainer{
+.frontContainer {
   display: flex;
   justify-content: center;
   margin-bottom: 70px;
@@ -328,8 +329,135 @@ html {
   position: absolute;
   z-index: -2px;
 }
-#mission_div img{
+#mission_div img {
   width: 38px;
   height: 38px;
   /* padding-bottom: 5px; */
+}
+@media only screen and (max-width: 700px) {
+  #mainImage {
+    width: 30vh;
+    height: 30vh;
+    margin-left: 35%;
+  }
+  #home_div img {
+    width: 28px;
+    height: 28px;
+  }
+  #forum_div img {
+    width: 28px;
+    height: 28px;
+  }
+  #study_div img {
+    width: 28px;
+    height: 28px;
+  }
+  #community_div img {
+    width: 28px;
+    height: 28px;
+  }
+  #mission_div img {
+    width: 28px;
+    height: 28px;
+  }
+  #account_div img {
+    width: 28px;
+    height: 28px;
+  }
+
+  #account_div {
+    width: 38px;
+    height: 38px;
+  }
+  #home_div {
+    width: 38px;
+    height: 38px;
+  }
+  #forum_div {
+    width: 38px;
+    height: 38px;
+  }
+  #study_div {
+    width: 38px;
+    height: 38px;
+  }
+  #community_div {
+    width: 38px;
+    height: 38px;
+  }
+  #mission_div {
+    width: 38px;
+    height: 38px;
+  }
+  .background {
+    width: 99vw;
+    height: 45px;
+  }
+  .frontPage div a {
+    margin: 2px;
+  }
+  .frontPage {
+    margin-top: 3px;
+  }
+  .backShadow {
+    width: 35vh;
+    height: 35vh;
+    margin-left: 31%;
+  }
+  #backgroundText h1 {
+    margin-left: -20px;
+  }
+  .navContainer {
+    width: 72px;
+    height: 72px;
+  }
+  #navImage {
+    width: 60px;
+    height: 60px;
+  }
+  #slogan {
+    margin-top: 10px;
+    top: 0;
+    margin-left: 65px;
+  }
+  .elements {
+    margin-left: 16px;
+  }
+  .elements a {
+    height: 50px;
+    width: 50px;
+  }
+  .elements a img {
+    width: 50px;
+    height: 50px;
+  }
+  .lastElements img {
+    width: 15px;
+  }
+  .descriptionClass {
+    font-size: 15px;
+  }
+  #pageTitle {
+    font-size: 40px;
+  }
+  #title {
+    font-size: 8px;
+    width: 40px;
+    margin-top: 5px;
+    margin-left: 10px;
+    opacity: 1;
+  }
+  .frontPage {
+    width: 100vw;
+  }
+  .widgetContainer h1 {
+    font-size: 15px;
+  }
+  .widgetContainer {
+    height: 15px;
+  }
+  #navImage {
+    width: 40px;
+    height: 40px;
+  }
 }
